[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu.gd" type="Script" id=1]
[ext_resource path="res://asset/merezjinn.png" type="Texture" id=2]
[ext_resource path="res://asset/c26c424ad4ca92f64f2494e3bac81141.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.392157, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.392157, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.101961, 0.392157, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.101961, 0.392157, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0588235, 0.262745, 0.0705882, 1 )

[node name="menu" type="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -509.0
margin_top = -601.0
margin_right = 517.0
margin_bottom = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = -161.0
margin_right = 130.0
margin_bottom = -20.0

[node name="startButton" type="Button" parent="VBoxContainer"]
margin_right = 110.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../quitbutton")
focus_neighbour_bottom = NodePath("../optionbutton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Start"

[node name="optionbutton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 92.0
focus_neighbour_top = NodePath("../startButton")
focus_neighbour_bottom = NodePath("../quitbutton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Option"

[node name="quitbutton" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 110.0
margin_bottom = 141.0
focus_neighbour_top = NodePath("../optionbutton")
focus_neighbour_bottom = NodePath("../startButton")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.88169, 2.8169 )
z_index = -1
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 25, 15 )

[connection signal="button_down" from="VBoxContainer/startButton" to="." method="_on_startButton_button_down"]
[connection signal="button_down" from="VBoxContainer/optionbutton" to="." method="_on_optionbutton_button_down"]
[connection signal="button_down" from="VBoxContainer/quitbutton" to="." method="_on_quitbutton_button_down"]
